--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -11,3 +11,19 @@ crate-type = ["cdylib", "staticlib"]
 [dependencies]
 anyhow = "1"
 flutter_rust_bridge = "1"
+
+# zk deps
+ark-bn254 = "0.4.0"
+ark-circom = { git = "https://github.com/gakonst/ark-circom.git", features = [
+    "circom-2",
+    # "wasm",
+] }
+ark-ff = "0.4.1"
+ark-groth16 = "0.4.0"
+ark-snark = "0.4.0"
+ark-std = "0.4.0"
+color-eyre = "0.6.2"
+rand = "0.8.5"
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.107"
+wasmer = { version = "2.3.0" }
