--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +39,20 @@ dependencies:
   flutter_rust_bridge: ^1.45.0
   meta: ^1.8.0
   uuid: ^3.0.7
+  get: ^4.6.6
+  flutter_screenutil: ^5.9.0
+  pretty_dio_logger: ^1.3.1
+  logger: ^2.0.2
+  lottie: ^2.6.0
+  hive_flutter: ^1.1.0
+  dio: ^5.3.2
+  shared_preferences: ^2.2.1
+  sprintf: ^7.0.0
+  flutter_easyloading: ^3.0.5
+  device_info_plus: ^9.0.3
+  flutter_app_badger: ^1.5.0
+  rxdart: ^0.27.7
+  visibility_detector: ^0.4.0+2
 
 dev_dependencies:
   flutter_test:
