--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   flutter_app_badger: ^1.5.0
   rxdart: ^0.27.7
   visibility_detector: ^0.4.0+2
+  getwidget: ^4.0.0
+  permission_handler: ^11.0.0
 
 dev_dependencies:
   flutter_test:
@@ -78,7 +80,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
