--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib", "staticlib"]
 
+# [workspace]
+# members = [".", "sp-core"]
+
 [dependencies]
 anyhow = "1"
 flutter_rust_bridge = "1"
@@ -27,3 +30,9 @@ rand = "0.8.5"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
 wasmer = { version = "2.3.0" }
+tiny-bip39 = "1.0.0"
+
+# wallet
+sp-core = { path = "sp-core" }
+bip39 = "2.0.0"
+data-encoding = "2.4.0"
