--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   permission_handler: ^11.0.0
   google_fonts: ^6.0.0
   dropdown_button2: ^2.3.9
+  bottom_bar_with_sheet: ^2.4.0
 
 dev_dependencies:
   flutter_test:
