--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,11 @@ dependencies:
   dropdown_button2: ^2.3.9
   bottom_bar_with_sheet: ^2.4.0
   expand_tap_area: ^1.1.1
+  encrypt: ^5.0.3
+  json_annotation: ^4.8.1
+  hive: ^2.2.3
+  flutter_secure_storage: ^9.0.0
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
