feat: receive page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   hive: ^2.2.3
   flutter_secure_storage: ^9.0.0
   path_provider: ^2.1.1
+  qr_flutter: 4.0.0
 
 dev_dependencies:
   flutter_test:
