--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   qr_flutter: 4.0.0
   vara_sdk:
     path: vara_sdk
+  decimal: ^2.3.3
 
 dev_dependencies:
   flutter_test:
@@ -93,10 +94,15 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
     - assets/images/
     - assets/images/icons/
     - assets/images/icon/
     - assets/images/menu/
+    - assets/
+    - packages/polkawallet_sdk/assets/
+    - js_as_extension/dist/main.js
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
