--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ dependencies:
     path: vara_sdk
   decimal: ^2.3.3
   cryptography: ^2.6.0
+  flutter_svg: ^2.0.7
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
