--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   cryptography: ^2.6.0
   flutter_svg: ^2.0.7
   cached_network_image: ^3.3.0
+  pixelarticons: ^0.4.0
 
 dev_dependencies:
   flutter_test:
