--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -8,10 +8,18 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib", "staticlib"]
 
-# [workspace]
-# members = [".", "sp-core"]
+[workspace]
+members = [".", "wallet_creation", "hdpath", "crypto-wallet-gen"]
+
+
+[workspace.dependencies]
+anyhow = "1"
+serde = { version = "1.0.188" }
+tiny-bip39 = "1.0.0"
+libsecp256k1 = "0.7.1"
 
 [dependencies]
+wallet_creation = { path = "./wallet_creation" }
 anyhow = "1"
 flutter_rust_bridge = "1"
 
@@ -27,7 +35,7 @@ ark-snark = "0.4.0"
 ark-std = "0.4.0"
 color-eyre = "0.6.2"
 rand = "0.8.5"
-serde = { version = "1.0.188", features = ["derive"] }
+serde = { workspace = true, features = ["derive"] }
 serde_json = "1.0.107"
 wasmer = { version = "2.3.0" }
 tiny-bip39 = "1.0.0"
