--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -34,7 +34,6 @@ ark-groth16 = "0.4.0"
 ark-snark = "0.4.0"
 ark-std = "0.4.0"
 color-eyre = "0.6.2"
-rand = "0.8.5"
 serde = { workspace = true, features = ["derive"] }
 serde_json = "1.0.107"
 wasmer = { version = "2.3.0" }
@@ -48,3 +47,14 @@ derivation-path = "0.2.0"
 thiserror = "1.0.39"
 uriparse = "0.6.4"
 qstring = "0.7.2"
+bitcoin = "0.30.0"
+bs58 = "0.4.0"
+
+rand = { version = "0.8" }
+rand0-7 = { package = "rand", version = "0.7" }
+
+[dependencies.ed25519-dalek]
+version = "=1.0.1"
+
+[dependencies.ed25519-dalek-bip32]
+version = "=0.2.0"
