--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # solana
   solana: 
     path: packages/solana
+  solana_mobile_client:
+    path: packages/solana_mobile_client
+  solana_mobile_wallet:
+    path: packages/solana_mobile_wallet
 
   cupertino_icons: ^1.0.2
   ffi: ^2.0.1
@@ -74,6 +78,7 @@ dependencies:
   flutter_svg: ^2.0.7
   cached_network_image: ^3.3.0
   pixelarticons: ^0.4.0
+  freezed_annotation: ^2.4.1
 
 dev_dependencies:
   flutter_test:
@@ -86,7 +91,10 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   ffigen: ">=8.0.0 <9.0.0"
-
+  build_runner: ^2.4.6
+  freezed: ^2.4.1
+  json_serializable: ^6.7.1
+  hive_generator: ^2.0.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
