--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dependencies:
   cached_network_image: ^3.3.0
   pixelarticons: ^0.4.0
   freezed_annotation: ^2.4.1
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
